src/test/resources/frontendReference/invalid/syntaxErr/if/ifNoelse.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 15:2 -- mismatched input 'fi' expecting {'else', ';'}
1 parser error(s) detected, no further compilation attempted.
